adding changes